Fixed the navigation which was shifting to mid screen on small devices i.e small tablets' portrait mode.
Screenshot: https://www.dropbox.com/s/p4ytzbwrjjlhpj9/Screenshot%202014-10-02%2005.16.55.png?dl=0

--- a/css/combined.css
+++ b/css/combined.css
@@ -5056,14 +5056,14 @@ h3.timer {
 /* sm */
 @media (min-width: 768px) and (max-width: 991px) {
 	#navigation .navbar-right {
-		margin-right: 13px;
+		margin-right: 0;
 	}
 	#navigation .navbar-right li a {
 		padding: 10px 8px;
 	}
 	
 	#navigation .navbar-fixed-top .navbar-right li a {
-		padding: 15px 10px;
+		padding: 15px 5px;
 	}
 	
 	.container>.carousel-arrows {
